# SoaringlsCar

./: .gitignore  README.md
calibration/src/calib_lidar_imu/: CMakeLists.txt  main.cpp
calibration/src/lslidar_trans/: CMakeLists.txt  package.xml
calibration/src/lslidar_trans/launch/: lslidar.launch
calibration/src/lslidar_trans/src/: lslidar_trans.cc
localization/: test.py
perception/src/fusion_nodelet/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md
perception/src/fusion_nodelet/config/: calib_lidar.txt  lidar_perception.config
perception/src/fusion_nodelet/launch/: fusion_nodelet.launch  kitti.launch  new_fusion.launch  test.launch
perception/src/fusion_nodelet/rviz/: fusion.rviz  kitti.rviz
perception/src/fusion_nodelet/src/: clustering.cc  clustering.h  filter.cc  filter.h  fusion_cloud_nodelet.cc  perception_nodelet.cc  perception_nodelet.h
perception/src/fusion_nodelet/urdf/: fusion.urdf
