<?xml version="1.0"?>
<package>
  <name>fusion_nodelet</name>
  <version>0.0.0</version>
  <description>The left and right lidar fusion_nodelet package</description>

  <maintainer email="upc_ls@163.com">soaringls</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>ndt_omp</build_depend> -->
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>ndt_omp</build_depend>
  
  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>ndt_omp</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
